Update MobFarmBonusConfig.java