@@ -28,6 +28,7 @@ import java.util.Locale;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Random;
+import java.util.StringJoiner;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.Identifier;
 import net.minecraft.world.entity.EntityType;
@@ -40,155 +41,291 @@ public class MobFarmBonusConfig extends Config {
   public static final String CONFIG_FILE_NAME = "mob_farm_bonus.cfg";
   public static final String CONFIG_FILE_HEADER =
 """
-# Mob Farm Bonus Configuration
-#
-# This configuration file allows you to define the bonus drops for the Mob Farms.
-#
-# Configuration Format:
-# --------------------
-# <mob_farm_name>::<tier_level>::<entity_type> = <item_name>::<amount>::<chance 1 of x>
-#
-# Available Mob Farm Types:
-# ------------------------
-# - animal_plains_farm: For animals like cows, sheep, chickens, pigs
-# - bee_hive_farm: For bees and honey production
-# - desert_farm: For desert mobs like husks, rabbits, camels
-# - iron_golem_farm: For iron golems and poppy drops
-# - jungle_farm: For jungle mobs like parrots, pandas, ocelots
-# - monster_plains_cave_farm: For common monsters like zombies, skeletons, spiders
-# - nether_fortress_farm: For nether mobs like blazes, magma cubes, wither skeletons
-# - ocean_farm: For ocean mobs like cod, salmon, squid, guardians
-# - swamp_farm: For swamp mobs like frogs, slimes, witches
-#
-# Tier Levels (better farms = better bonus chances):
-# -------------------------------------------------
-# - 0: Basic tier (lowest bonus chance)
-# - 1: Improved tier (better bonus chance)
-# - 2: Advanced tier (good bonus chance)
-# - 3: Elite tier (highest bonus chance)
-#
-# Configuration Examples:
-# ----------------------
-# Basic bee farm with 1 in 20 chance for honeycomb:
-#   bee_hive_farm::0::minecraft:bee = minecraft:honeycomb::1::20
-#
-# Elite bee farm with 1 in 5 chance for honeycomb:
-#   bee_hive_farm::3::minecraft:bee = minecraft:honeycomb::1::5
-#
-# Multiple bonus items for the same mob (using list syntax):
-#   ocean_farm::1::minecraft:cod = [minecraft:cod::1::10, minecraft:bone_meal::1::25]
-#
-# Important Notes:
-# ---------------
-# - Lower chance numbers = higher drop probability (1 = always, 100 = 1% chance)
-# - To disable a bonus drop, set the amount to 0
-# - Each mob farm type targets specific biome-appropriate mobs
-# - Higher tier farms have better default bonus chances
+ Mob Farm Bonus Configuration
+
+ This configuration file allows you to define the bonus drops for the Mob Farms.
+
+ Configuration Format:
+ --------------------
+ <mob_farm_name>::<tier_level>::<entity_type> = <item_name>::<amount>::<chance 1 of x>
+
+ Available Mob Farm Types:
+ ------------------------
+ - animal_plains_farm: For animals like cows, sheep, chickens, pigs
+ - bee_hive_farm: For bees and honey production
+ - desert_farm: For desert mobs like husks, rabbits, camels
+ - iron_golem_farm: For iron golems and poppy drops
+ - jungle_farm: For jungle mobs like parrots, pandas, ocelots
+ - monster_plains_cave_farm: For common monsters like zombies, skeletons, spiders
+ - nether_fortress_farm: For nether mobs like blazes, magma cubes, wither skeletons
+ - ocean_farm: For ocean mobs like cod, salmon, squid, guardians
+ - swamp_farm: For swamp mobs like frogs, slimes, witches
+
+ Tier Levels (better farms = better bonus chances):
+ -------------------------------------------------
+ - 0: Basic tier (lowest bonus chance)
+ - 1: Improved tier (better bonus chance)
+ - 2: Advanced tier (good bonus chance)
+ - 3: Elite tier (highest bonus chance)
+
+ Configuration Examples:
+ ----------------------
+ Basic bee farm with 1 in 20 chance for honeycomb:
+   bee_hive_farm::0::minecraft:bee = minecraft:honeycomb::1::20
+
+ Elite bee farm with 1 in 5 chance for honeycomb:
+   bee_hive_farm::3::minecraft:bee = minecraft:honeycomb::1::5
+
+ Iron golem farm with bonus iron ingots:
+   iron_golem_farm::2::minecraft:iron_golem = minecraft:iron_ingot::2::8
+
+ Multiple bonus items for the same mob (using list syntax):
+   ocean_farm::1::minecraft:cod = [minecraft:cod::1::10, minecraft:bone_meal::1::25]
+
+ Important Notes:
+ ---------------
+ - Lower chance numbers = higher drop probability (1 = always, 100 = 1% chance)
+ - To disable a bonus drop, set the amount to 0
+ - Each mob farm type targets specific biome-appropriate mobs
+ - Higher tier farms have better default bonus chances
 
 """;
   public static final String LOG_PREFIX = "[MobFarmBonusConfig]";
 
   private static final Random random = new Random();
-
-  public static class BonusDrop {
-    public final int chance;
-    public final ItemStack itemStack;
-
-    public BonusDrop(int chance, ItemStack itemStack) {
-      this.chance = chance;
-      this.itemStack = itemStack;
-    }
-  }
-
   private static final HashMap<String, List<BonusDrop>> mobFarmBonusMap = new HashMap<>();
   private static final HashMap<String, List<BonusDrop>> defaultMobFarmBonusMap = new HashMap<>();
 
   static {
     // Animal Plains Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::0::minecraft:cow", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.LEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::1::minecraft:cow", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.LEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::2::minecraft:cow", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.LEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::3::minecraft:cow", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.LEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::0::minecraft:sheep", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.WHITE_WOOL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::1::minecraft:sheep", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.WHITE_WOOL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::2::minecraft:sheep", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.WHITE_WOOL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::3::minecraft:sheep", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.WHITE_WOOL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::0::minecraft:chicken", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.EGG, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::1::minecraft:chicken", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.EGG, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::2::minecraft:chicken", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.EGG, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::3::minecraft:chicken", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.EGG, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::0::minecraft:cow",
+        List.of(new BonusDrop(20, new ItemStack(Items.LEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::1::minecraft:cow",
+        List.of(new BonusDrop(15, new ItemStack(Items.LEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::2::minecraft:cow",
+        List.of(new BonusDrop(10, new ItemStack(Items.LEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::3::minecraft:cow",
+        List.of(new BonusDrop(5, new ItemStack(Items.LEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::0::minecraft:sheep",
+        List.of(new BonusDrop(20, new ItemStack(Items.WHITE_WOOL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::1::minecraft:sheep",
+        List.of(new BonusDrop(15, new ItemStack(Items.WHITE_WOOL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::2::minecraft:sheep",
+        List.of(new BonusDrop(10, new ItemStack(Items.WHITE_WOOL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::3::minecraft:sheep",
+        List.of(new BonusDrop(5, new ItemStack(Items.WHITE_WOOL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::0::minecraft:chicken",
+        List.of(new BonusDrop(20, new ItemStack(Items.EGG, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::1::minecraft:chicken",
+        List.of(new BonusDrop(15, new ItemStack(Items.EGG, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::2::minecraft:chicken",
+        List.of(new BonusDrop(10, new ItemStack(Items.EGG, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.ANIMAL_PLAINS_FARM.getId() + "::3::minecraft:chicken",
+        List.of(new BonusDrop(5, new ItemStack(Items.EGG, 1))));
 
     // Bee Hive Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.BEE_HIVE_FARM.getId() + "::0::minecraft:bee", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.HONEYCOMB, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.BEE_HIVE_FARM.getId() + "::1::minecraft:bee", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.HONEYCOMB, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.BEE_HIVE_FARM.getId() + "::2::minecraft:bee", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.HONEYCOMB, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.BEE_HIVE_FARM.getId() + "::3::minecraft:bee", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.HONEYCOMB, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.BEE_HIVE_FARM.getId() + "::0::minecraft:bee",
+        List.of(new BonusDrop(20, new ItemStack(Items.HONEYCOMB, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.BEE_HIVE_FARM.getId() + "::1::minecraft:bee",
+        List.of(new BonusDrop(15, new ItemStack(Items.HONEYCOMB, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.BEE_HIVE_FARM.getId() + "::2::minecraft:bee",
+        List.of(new BonusDrop(10, new ItemStack(Items.HONEYCOMB, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.BEE_HIVE_FARM.getId() + "::3::minecraft:bee",
+        List.of(new BonusDrop(5, new ItemStack(Items.HONEYCOMB, 1))));
 
     // Desert Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::0::minecraft:husk", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.SAND, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::1::minecraft:husk", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.SAND, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::2::minecraft:husk", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.SAND, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::3::minecraft:husk", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.SAND, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::0::minecraft:rabbit", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.RABBIT_HIDE, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::1::minecraft:rabbit", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.RABBIT_HIDE, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::2::minecraft:rabbit", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.RABBIT_HIDE, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.DESERT_FARM.getId() + "::3::minecraft:rabbit", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.RABBIT_HIDE, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::0::minecraft:husk",
+        List.of(new BonusDrop(20, new ItemStack(Items.SAND, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::1::minecraft:husk",
+        List.of(new BonusDrop(15, new ItemStack(Items.SAND, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::2::minecraft:husk",
+        List.of(new BonusDrop(10, new ItemStack(Items.SAND, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::3::minecraft:husk",
+        List.of(new BonusDrop(5, new ItemStack(Items.SAND, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::0::minecraft:rabbit",
+        List.of(new BonusDrop(20, new ItemStack(Items.RABBIT_HIDE, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::1::minecraft:rabbit",
+        List.of(new BonusDrop(15, new ItemStack(Items.RABBIT_HIDE, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::2::minecraft:rabbit",
+        List.of(new BonusDrop(10, new ItemStack(Items.RABBIT_HIDE, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.DESERT_FARM.getId() + "::3::minecraft:rabbit",
+        List.of(new BonusDrop(5, new ItemStack(Items.RABBIT_HIDE, 1))));
 
     // Iron Golem Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.IRON_GOLEM_FARM.getId() + "::0::minecraft:iron_golem", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.IRON_INGOT, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.IRON_GOLEM_FARM.getId() + "::1::minecraft:iron_golem", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.IRON_INGOT, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.IRON_GOLEM_FARM.getId() + "::2::minecraft:iron_golem", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.IRON_INGOT, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.IRON_GOLEM_FARM.getId() + "::3::minecraft:iron_golem", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.IRON_INGOT, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.IRON_GOLEM_FARM.getId() + "::0::minecraft:iron_golem",
+        List.of(new BonusDrop(20, new ItemStack(Items.IRON_INGOT, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.IRON_GOLEM_FARM.getId() + "::1::minecraft:iron_golem",
+        List.of(new BonusDrop(15, new ItemStack(Items.IRON_INGOT, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.IRON_GOLEM_FARM.getId() + "::2::minecraft:iron_golem",
+        List.of(new BonusDrop(10, new ItemStack(Items.IRON_INGOT, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.IRON_GOLEM_FARM.getId() + "::3::minecraft:iron_golem",
+        List.of(new BonusDrop(5, new ItemStack(Items.IRON_INGOT, 1))));
 
     // Jungle Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::0::minecraft:parrot", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.FEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::1::minecraft:parrot", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.FEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::2::minecraft:parrot", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.FEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::3::minecraft:parrot", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.FEATHER, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::0::minecraft:panda", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.BAMBOO, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::1::minecraft:panda", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.BAMBOO, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::2::minecraft:panda", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.BAMBOO, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.JUNGLE_FARM.getId() + "::3::minecraft:panda", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.BAMBOO, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::0::minecraft:parrot",
+        List.of(new BonusDrop(20, new ItemStack(Items.FEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::1::minecraft:parrot",
+        List.of(new BonusDrop(15, new ItemStack(Items.FEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::2::minecraft:parrot",
+        List.of(new BonusDrop(10, new ItemStack(Items.FEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::3::minecraft:parrot",
+        List.of(new BonusDrop(5, new ItemStack(Items.FEATHER, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::0::minecraft:panda",
+        List.of(new BonusDrop(20, new ItemStack(Items.BAMBOO, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::1::minecraft:panda",
+        List.of(new BonusDrop(15, new ItemStack(Items.BAMBOO, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::2::minecraft:panda",
+        List.of(new BonusDrop(10, new ItemStack(Items.BAMBOO, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.JUNGLE_FARM.getId() + "::3::minecraft:panda",
+        List.of(new BonusDrop(5, new ItemStack(Items.BAMBOO, 1))));
 
     // Monster Plains Cave Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::0::minecraft:zombie", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.ROTTEN_FLESH, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::1::minecraft:zombie", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.ROTTEN_FLESH, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::2::minecraft:zombie", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.ROTTEN_FLESH, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::3::minecraft:zombie", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.ROTTEN_FLESH, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::0::minecraft:zombie",
+        List.of(
+            new BonusDrop(20, new ItemStack(Items.ROTTEN_FLESH, 1)),
+            new BonusDrop(40, new ItemStack(Items.IRON_NUGGET, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::1::minecraft:zombie",
+        List.of(
+            new BonusDrop(15, new ItemStack(Items.ROTTEN_FLESH, 1)),
+            new BonusDrop(25, new ItemStack(Items.IRON_NUGGET, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::2::minecraft:zombie",
+        List.of(
+            new BonusDrop(10, new ItemStack(Items.ROTTEN_FLESH, 1)),
+            new BonusDrop(15, new ItemStack(Items.IRON_NUGGET, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.MONSTER_PLAINS_CAVE_FARM.getId() + "::3::minecraft:zombie",
+        List.of(
+            new BonusDrop(5, new ItemStack(Items.ROTTEN_FLESH, 1)),
+            new BonusDrop(10, new ItemStack(Items.IRON_NUGGET, 1))));
 
     // Nether Fortress Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::0::minecraft:blaze", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.BLAZE_ROD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::1::minecraft:blaze", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.BLAZE_ROD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::2::minecraft:blaze", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.BLAZE_ROD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::3::minecraft:blaze", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.BLAZE_ROD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::0::minecraft:magma_cube", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.MAGMA_CREAM, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::1::minecraft:magma_cube", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.MAGMA_CREAM, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::2::minecraft:magma_cube", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.MAGMA_CREAM, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.NETHER_FORTRESS_FARM.getId() + "::3::minecraft:magma_cube", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.MAGMA_CREAM, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::0::minecraft:blaze",
+        List.of(new BonusDrop(20, new ItemStack(Items.BLAZE_ROD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::1::minecraft:blaze",
+        List.of(new BonusDrop(15, new ItemStack(Items.BLAZE_ROD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::2::minecraft:blaze",
+        List.of(new BonusDrop(10, new ItemStack(Items.BLAZE_ROD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::3::minecraft:blaze",
+        List.of(new BonusDrop(5, new ItemStack(Items.BLAZE_ROD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::0::minecraft:magma_cube",
+        List.of(new BonusDrop(20, new ItemStack(Items.MAGMA_CREAM, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::1::minecraft:magma_cube",
+        List.of(new BonusDrop(15, new ItemStack(Items.MAGMA_CREAM, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::2::minecraft:magma_cube",
+        List.of(new BonusDrop(10, new ItemStack(Items.MAGMA_CREAM, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.NETHER_FORTRESS_FARM.getId() + "::3::minecraft:magma_cube",
+        List.of(new BonusDrop(5, new ItemStack(Items.MAGMA_CREAM, 1))));
 
     // Ocean Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::0::minecraft:cod", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.COD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::1::minecraft:cod", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.COD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::2::minecraft:cod", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.COD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::3::minecraft:cod", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.COD, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::0::minecraft:squid", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.INK_SAC, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::1::minecraft:squid", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.INK_SAC, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::2::minecraft:squid", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.INK_SAC, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.OCEAN_FARM.getId() + "::3::minecraft:squid", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.INK_SAC, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::0::minecraft:cod",
+        List.of(new BonusDrop(20, new ItemStack(Items.COD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::1::minecraft:cod",
+        List.of(new BonusDrop(15, new ItemStack(Items.COD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::2::minecraft:cod",
+        List.of(new BonusDrop(10, new ItemStack(Items.COD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::3::minecraft:cod",
+        List.of(new BonusDrop(5, new ItemStack(Items.COD, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::0::minecraft:squid",
+        List.of(new BonusDrop(20, new ItemStack(Items.INK_SAC, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::1::minecraft:squid",
+        List.of(new BonusDrop(15, new ItemStack(Items.INK_SAC, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::2::minecraft:squid",
+        List.of(new BonusDrop(10, new ItemStack(Items.INK_SAC, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.OCEAN_FARM.getId() + "::3::minecraft:squid",
+        List.of(new BonusDrop(5, new ItemStack(Items.INK_SAC, 1))));
 
     // Swamp Farm Bonus
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::0::minecraft:frog", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::1::minecraft:frog", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::2::minecraft:frog", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::3::minecraft:frog", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::0::minecraft:slime", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::1::minecraft:slime", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::2::minecraft:slime", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::3::minecraft:slime", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.SLIME_BALL, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::0::minecraft:witch", new ArrayList<>(List.of(new BonusDrop(20, new ItemStack(Items.REDSTONE, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::1::minecraft:witch", new ArrayList<>(List.of(new BonusDrop(15, new ItemStack(Items.REDSTONE, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::2::minecraft:witch", new ArrayList<>(List.of(new BonusDrop(10, new ItemStack(Items.REDSTONE, 1)))));
-    defaultMobFarmBonusMap.put(MobFarmType.SWAMP_FARM.getId() + "::3::minecraft:witch", new ArrayList<>(List.of(new BonusDrop(5, new ItemStack(Items.REDSTONE, 1)))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::0::minecraft:frog",
+        List.of(new BonusDrop(20, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::1::minecraft:frog",
+        List.of(new BonusDrop(15, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::2::minecraft:frog",
+        List.of(new BonusDrop(10, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::3::minecraft:frog",
+        List.of(new BonusDrop(5, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::0::minecraft:slime",
+        List.of(new BonusDrop(20, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::1::minecraft:slime",
+        List.of(new BonusDrop(15, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::2::minecraft:slime",
+        List.of(new BonusDrop(10, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::3::minecraft:slime",
+        List.of(new BonusDrop(5, new ItemStack(Items.SLIME_BALL, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::0::minecraft:witch",
+        List.of(new BonusDrop(20, new ItemStack(Items.REDSTONE, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::1::minecraft:witch",
+        List.of(new BonusDrop(15, new ItemStack(Items.REDSTONE, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::2::minecraft:witch",
+        List.of(new BonusDrop(10, new ItemStack(Items.REDSTONE, 1))));
+    defaultMobFarmBonusMap.put(
+        MobFarmType.SWAMP_FARM.getId() + "::3::minecraft:witch",
+        List.of(new BonusDrop(5, new ItemStack(Items.REDSTONE, 1))));
   }
 
   public static void registerConfig() {
@@ -208,20 +345,19 @@ public class MobFarmBonusConfig extends Config {
         (mobFarmName, bonusList) -> {
           if (!properties.containsKey(mobFarmName)) {
             if (bonusList.size() == 1) {
-              BonusDrop drop = bonusList.get(0);
-              String itemName = BuiltInRegistries.ITEM.getKey(drop.itemStack.getItem()).toString();
-              String value = itemName + "::" + drop.itemStack.getCount() + "::" + drop.chance;
+              BonusDrop drop = bonusList.getFirst();
+              String itemName =
+                  BuiltInRegistries.ITEM.getKey(drop.itemStack().getItem()).toString();
+              String value = itemName + "::" + drop.itemStack().getCount() + "::" + drop.chance();
               properties.setProperty(mobFarmName, value);
             } else {
-              StringBuilder sb = new StringBuilder("[");
-              for(int i = 0; i < bonusList.size(); i++) {
-                BonusDrop drop = bonusList.get(i);
-                String itemName = BuiltInRegistries.ITEM.getKey(drop.itemStack.getItem()).toString();
-                sb.append(itemName).append("::").append(drop.itemStack.getCount()).append("::").append(drop.chance);
-                if (i < bonusList.size() - 1) sb.append(", ");
+              StringJoiner joiner = new StringJoiner(", ", "[", "]");
+              for (BonusDrop drop : bonusList) {
+                String itemName =
+                    BuiltInRegistries.ITEM.getKey(drop.itemStack().getItem()).toString();
+                joiner.add(itemName + "::" + drop.itemStack().getCount() + "::" + drop.chance());
               }
-              sb.append("]");
-              properties.setProperty(mobFarmName, sb.toString());
+              properties.setProperty(mobFarmName, joiner.toString());
             }
           }
         });
@@ -233,12 +369,11 @@ public class MobFarmBonusConfig extends Config {
           if (keyParts == null) return;
 
           String valStr = ((String) value).trim();
-          
+
           if (valStr.startsWith("[") && valStr.endsWith("]")) {
-            valStr = valStr.substring(1, valStr.length() - 1);
-            String[] items = valStr.split(",");
-            for (String itemStr : items) {
-              parseAndAddDrop(keyParts, itemStr.trim());
+            valStr = valStr.substring(1, valStr.length() - 1).trim();
+            for (String itemStr : valStr.split("\\s*,\\s*")) {
+              parseAndAddDrop(keyParts, itemStr);
             }
           } else {
             parseAndAddDrop(keyParts, valStr);
@@ -251,7 +386,15 @@ public class MobFarmBonusConfig extends Config {
 
   private static void parseAndAddDrop(String[] keyParts, String valueStr) {
     String[] valueParts = parseValue(valueStr);
-    if (valueParts == null || valueParts[0].isEmpty()) return;
+    if (valueParts == null) {
+      return;
+    }
+
+    String itemName = valueParts[0];
+    if (itemName.isEmpty()) {
+      log.error("{} Missing item name in config entry: {}", LOG_PREFIX, valueStr);
+      return;
+    }
 
     try {
       addBonusDropEntry(
@@ -259,11 +402,15 @@ public class MobFarmBonusConfig extends Config {
           Integer.parseInt(keyParts[1]),
           keyParts[2],
           Integer.parseInt(valueParts[2]),
-          valueParts[0],
+          itemName,
           Integer.parseInt(valueParts[1]));
     } catch (NumberFormatException e) {
-      log.error("{} Invalid number format in config file {}: key={}, value={}",
-          LOG_PREFIX, CONFIG_FILE_NAME, String.join("::", keyParts), valueStr);
+      log.error(
+          "{} Invalid number format in config file {}: key={}, value={}",
+          LOG_PREFIX,
+          CONFIG_FILE_NAME,
+          String.join("::", keyParts),
+          valueStr);
     }
   }
 
@@ -281,7 +428,8 @@ public class MobFarmBonusConfig extends Config {
 
     Optional<Item> item = BuiltInRegistries.ITEM.getOptional(Identifier.tryParse(itemName));
     if (item.isEmpty() || item.get() == Items.AIR) {
-      log.error("{} Invalid item name {} in config file {}", LOG_PREFIX, itemName, CONFIG_FILE_NAME);
+      log.error(
+          "{} Invalid item name {} in config file {}", LOG_PREFIX, itemName, CONFIG_FILE_NAME);
       return;
     }
 
@@ -290,7 +438,11 @@ public class MobFarmBonusConfig extends Config {
       addBonusDropEntry(
           mobFarmType, tierLevel, entityType, chance, new ItemStack(item.get(), amount));
     } catch (IllegalArgumentException e) {
-      log.error("{} Invalid mob farm name {} in config file {}", LOG_PREFIX, mobFarmName, CONFIG_FILE_NAME);
+      log.error(
+          "{} Invalid mob farm name {} in config file {}",
+          LOG_PREFIX,
+          mobFarmName,
+          CONFIG_FILE_NAME);
     }
   }
 
@@ -301,124 +453,132 @@ public class MobFarmBonusConfig extends Config {
       int chance,
       final ItemStack itemStack) {
 
+    // Check if item stack amount is valid
     if (itemStack.isEmpty()) {
-      log.error("{} Invalid item stack {} in config file {}", LOG_PREFIX, itemStack, CONFIG_FILE_NAME);
+      log.error(
+          "{} Invalid item stack {} in config file {}", LOG_PREFIX, itemStack, CONFIG_FILE_NAME);
       return;
     }
 
+    // Check if entity type is valid
     if (BuiltInRegistries.ENTITY_TYPE.getOptional(Identifier.tryParse(entityType)).isEmpty()) {
-      log.error("{} Invalid entity type {} in config file {}", LOG_PREFIX, entityType, CONFIG_FILE_NAME);
+      log.error(
+          "{} Invalid entity type {} in config file {}", LOG_PREFIX, entityType, CONFIG_FILE_NAME);
       return;
     }
 
+    // Validate tier level (0-3)
     if (tierLevel < 0 || tierLevel > 3) {
-      log.warn("{} Tier level {} is outside valid range (0-3) for {} in config file {}", LOG_PREFIX, tierLevel, entityType, CONFIG_FILE_NAME);
+      log.warn(
+          "{} Tier level {} is outside valid range (0-3) for {} in config file {}",
+          LOG_PREFIX,
+          tierLevel,
+          entityType,
+          CONFIG_FILE_NAME);
       tierLevel = 0;
     }
 
+    // Validate chance value (must be >= 1)
     if (chance < 1) {
-      log.warn("{} Invalid chance value {} (must be >= 1) for {} in config file {}, using default of 5", LOG_PREFIX, chance, entityType, CONFIG_FILE_NAME);
+      log.warn(
+          "{} Invalid chance value {} (must be >= 1) for {} in config file {}, using default of 5",
+          LOG_PREFIX,
+          chance,
+          entityType,
+          CONFIG_FILE_NAME);
       chance = 5;
     }
 
+    // Validate drop amount against item max stack size
     int maxStackSize = itemStack.getMaxStackSize();
     int configuredAmount = itemStack.getCount();
     int maxAllowedAmount = maxStackSize * MobFarmConfig.maxBonusDropMultiplier;
 
     if (configuredAmount > maxAllowedAmount) {
-      log.warn("{} Configured amount {} exceeds maximum allowed {} ({}x stack size of {}) for {} in config file {}, capping to maximum",
-          LOG_PREFIX, configuredAmount, maxAllowedAmount, MobFarmConfig.maxBonusDropMultiplier, maxStackSize, entityType, CONFIG_FILE_NAME);
+      log.warn(
+          "{} Configured amount {} exceeds maximum allowed {} ({}x stack size of {}) for {} in config file {}, capping to maximum",
+          LOG_PREFIX,
+          configuredAmount,
+          maxAllowedAmount,
+          MobFarmConfig.maxBonusDropMultiplier,
+          maxStackSize,
+          entityType,
+          CONFIG_FILE_NAME);
       itemStack.setCount(maxAllowedAmount);
     } else if (configuredAmount > maxStackSize * 10) {
-      log.warn("{} High drop amount {} configured ({}x stack size of {}) for {} - ensure your modpack supports this with storage mods",
-          LOG_PREFIX, configuredAmount, configuredAmount / maxStackSize, maxStackSize, entityType);
+      log.warn(
+          "{} High drop amount {} configured ({}x stack size of {}) for {} - ensure your modpack supports this with storage mods",
+          LOG_PREFIX,
+          configuredAmount,
+          configuredAmount / maxStackSize,
+          maxStackSize,
+          entityType);
     }
 
+    // Add bonus drop entry to the map
     String mobFarmKey = getMobFarmKey(mobFarmType.getId(), tierLevel, entityType);
-    log.info("{} Add {} with a chance of 1 of {} for {}.", LOG_PREFIX, mobFarmKey, chance, itemStack);
-    
-    mobFarmBonusMap.computeIfAbsent(mobFarmKey, k -> new ArrayList<>()).add(new BonusDrop(chance, itemStack));
+    log.info(
+        "{} Add {} with a chance of 1 of {} for {}.", LOG_PREFIX, mobFarmKey, chance, itemStack);
+
+    mobFarmBonusMap
+        .computeIfAbsent(mobFarmKey, k -> new ArrayList<>())
+        .add(new BonusDrop(chance, itemStack));
   }
 
-  // Maintains UI stability by returning the first valid entry found for display
-  public static ItemStack getBonusDropEntry(MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
-    return getBonusDropEntry(mobFarmType.getId(), tierLevel, String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
-  }
-
-  public static ItemStack getBonusDropEntry(String mobFarmName, int tierLevel, String entityType) {
-    if (!hasBonusDrop(mobFarmName, tierLevel, entityType)) {
-      return ItemStack.EMPTY;
-    }
-    String key = getMobFarmKey(mobFarmName, tierLevel, entityType);
-    return mobFarmBonusMap.get(key).get(0).itemStack.copy();
-  }
-
-  public static int getBonusDropChance(MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
-    return getBonusDropChance(mobFarmType.getId(), tierLevel, String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
-  }
-
-  public static int getBonusDropChance(String mobFarmName, int tierLevel, String entityType) {
-    if (!hasBonusDrop(mobFarmName, tierLevel, entityType)) {
-      return 0;
-    }
-    String key = getMobFarmKey(mobFarmName, tierLevel, entityType);
-    return mobFarmBonusMap.get(key).get(0).chance;
-  }
-
-  // --- CORE CHANGE: Now returns a List of independent drops ---
-  public static List<ItemStack> getBonusDrop(MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
-    return getBonusDrop(mobFarmType.getId(), tierLevel, String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
+  public static List<ItemStack> getBonusDrop(
+      MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
+    return getBonusDrop(
+        mobFarmType.getId(),
+        tierLevel,
+        String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
   }
 
   public static List<ItemStack> getBonusDrop(String mobFarmName, int tierLevel, String entityType) {
     List<ItemStack> drops = new ArrayList<>();
     if (!hasBonusDrop(mobFarmName, tierLevel, entityType)) {
-      return drops;
+      return List.of();
     }
-    
-    String key = getMobFarmKey(mobFarmName, tierLevel, entityType);
-    
-    // Each item rolls entirely independently
-    for (BonusDrop drop : mobFarmBonusMap.get(key)) {
-      if (random.nextInt(drop.chance) == 0) {
-        drops.add(drop.itemStack.copy());
+    for (BonusDrop drop : mobFarmBonusMap.get(getMobFarmKey(mobFarmName, tierLevel, entityType))) {
+      if (random.nextInt(drop.chance()) == 0) {
+        drops.add(drop.itemStack().copy());
       }
     }
-    
+
     return drops;
   }
 
-  public static List<ItemStack> getBonusDropEntries(MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
-    return getBonusDropEntries(mobFarmType.getId(), tierLevel, String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
+  public static List<ItemStack> getBonusDropEntries(
+      MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
+    return getBonusDropEntries(
+        mobFarmType.getId(),
+        tierLevel,
+        String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
   }
 
-
-  public static List<BonusDrop> getConfiguredBonusDrops(MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
-    return getConfiguredBonusDrops(mobFarmType.getId(), tierLevel, String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
+  public static List<BonusDrop> getConfiguredBonusDrops(
+      MobFarmType mobFarmType, int tierLevel, EntityType<?> entityType) {
+    return getConfiguredBonusDrops(
+        mobFarmType.getId(),
+        tierLevel,
+        String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
   }
 
-  public static List<BonusDrop> getConfiguredBonusDrops(String mobFarmName, int tierLevel, String entityType) {
+  public static List<BonusDrop> getConfiguredBonusDrops(
+      String mobFarmName, int tierLevel, String entityType) {
     if (!hasBonusDrop(mobFarmName, tierLevel, entityType)) {
-      return new ArrayList<>();
+      return List.of();
     }
-    String key = getMobFarmKey(mobFarmName, tierLevel, entityType);
-    return mobFarmBonusMap.get(key);
+    return List.copyOf(mobFarmBonusMap.get(getMobFarmKey(mobFarmName, tierLevel, entityType)));
   }
 
-  public static List<ItemStack> getBonusDropEntries(String mobFarmName, int tierLevel, String entityType) {
-    List<ItemStack> displayItems = new ArrayList<>();
+  public static List<ItemStack> getBonusDropEntries(
+      String mobFarmName, int tierLevel, String entityType) {
     if (!hasBonusDrop(mobFarmName, tierLevel, entityType)) {
-      return displayItems;
+      return List.of();
     }
-    String key = getMobFarmKey(mobFarmName, tierLevel, entityType);
-    for (BonusDrop drop : mobFarmBonusMap.get(key)) {
-      displayItems.add(drop.itemStack.copy());
-    }
-    return displayItems;
-  }
-
-  public static boolean hasBonusDrop(String mobFarmName, int tierLevel, EntityType<?> entityType) {
-    return hasBonusDrop(mobFarmName, tierLevel, String.valueOf(BuiltInRegistries.ENTITY_TYPE.getKey(entityType)));
+    return mobFarmBonusMap.get(getMobFarmKey(mobFarmName, tierLevel, entityType)).stream()
+        .map(drop -> drop.itemStack().copy())
+        .toList();
   }
 
   public static boolean hasBonusDrop(String mobFarmName, int tierLevel, String entityType) {
@@ -426,7 +586,7 @@ public class MobFarmBonusConfig extends Config {
   }
 
   private static String[] parseKey(String key) {
-    String[] keyParts = key.split("::");
+    String[] keyParts = key.split("\\s*::\\s*");
     if (keyParts.length != 3) {
       log.error("Invalid key format in config file: {}", key);
       return null;
@@ -435,11 +595,13 @@ public class MobFarmBonusConfig extends Config {
   }
 
   private static String[] parseValue(String value) {
-    String[] valueParts = value.split("::");
+    String[] valueParts = value.split("\\s*::\\s*");
     if (valueParts.length != 3) {
       log.error("Invalid value format in config file: {}", value);
       return null;
     }
     return valueParts;
   }
+
+  public record BonusDrop(int chance, ItemStack itemStack) {}
 }
